--- a/schemas/user_request.yaml
+++ b/schemas/user_request.yaml
@@ -5,31 +5,10 @@ definitions:
       full_name:
         type: string
         example: Raul Silva Araujo
-        description: full name
-      cpf:
-        type: string
-        example: 123.456.789.00
-        description: user cpf
-      phone:
-        type: string
-        example: 016992161299
-        description: user phone
       email:
         type: string
-        example: raul.araujo.2000@hotmail.com
-        description: user email
-      address:
-        type: object
-        properties:
-          city:
-            type: string
-            example: Franca
-            description: user city
-          state:
-            type: string
-            example: SP
-            description: user state
-          zip:
-            type: string
-            example: 14400-000
-            description: user zip
+        example: raul@hotmail.com
+      password:
+        type: string
+        format: password
+        example: raul1234
